--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -13,13 +13,11 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
-      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w== "
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <link rel="stylesheet" href="../css/reset.css" />
-    <link rel="stylesheet" href="../css/portfolio.css" />
-    <link rel="stylesheet" href="../css/animations-libraly.css">
+    <link rel="stylesheet" href="../css/portfolio.min.css" />
   </head>
   <body>
     <header class="header">
@@ -104,7 +102,11 @@
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
-                <img class="hero-image" src="../img/basketball.webp" alt="basketball" />
+                <img
+                  class="hero-image"
+                  src="../img/basketball.webp"
+                  alt="basketball"
+                />
                 <h3 class="hero-title">Постер New Orlean vs Golden Star</h3>
                 <p class="hero-text">Дизайн</p>
               </li>
@@ -132,7 +134,11 @@
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
-                <img class="hero-image" src="../img/headphones.webp"  alt="headphones" />
+                <img
+                  class="hero-image"
+                  src="../img/headphones.webp"
+                  alt="headphones"
+                />
                 <h3 class="hero-title">Проєкт Prime</h3>
                 <p class="hero-text">Маркетинг</p>
               </li>
