--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -21,34 +21,34 @@
   </head>
   <body>
     <header class="header">
-      <div class="container header-container">
-        <a href="../index.html" class="header-logo"
-          ><span class="header-logo1">Web</span
-          ><span class="header-logo2">Studio</span></a
+      <div class="container header__container">
+        <a href="../index.html" class="header__logo"
+          ><span class="header__logo1">Web</span
+          ><span class="header__logo2">Studio</span></a
         >
-        <ul class="header-list">
-          <li class="header-item">
-            <a href="../index.html" class="header-link">Студія</a>
+        <ul class="header__list">
+          <li class="header__item">
+            <a href="../index.html" class="header__link">Студія</a>
           </li>
-          <li class="header-item">
-            <a href="./pages/portfolio.html" class="header-link">Портфоліо</a>
+          <li class="header__item">
+            <a href="./pages/portfolio.html" class="header__link">Портфоліо</a>
           </li>
-          <li class="header-item">
-            <a href="contacts.html" class="header-link">Контакти</a>
+          <li class="header__item">
+            <a href="contacts.html" class="header__link">Контакти</a>
           </li>
         </ul>
-        <ul class="header-autorisations">
-          <li class="header-item2">
-            <a href="info@devstudio.com" class="header-contacts">
-              <svg class="header-icon-mail">
+        <ul class="header__autorisations">
+          <li class="header__item2">
+            <a href="info@devstudio.com" class="header__contacts">
+              <svg class="header__mail">
                 <use href="../img/symbol-defs.svg#icon-mail"></use>
               </svg>
               info@devstudio.com
             </a>
           </li>
-          <li class="header-item2">
-            <a href="+380961111111" class="header-contacts">
-              <svg class="header-icon-phone">
+          <li class="header__item2">
+            <a href="+380961111111" class="header__contacts">
+              <svg class="header__phone">
                 <use href="../img/symbol-defs.svg#icon-phone"></use>
               </svg>
               +38 096 111 11 11
@@ -59,158 +59,158 @@
     </header>
     <main>
       <!-- Hero -->
-      <section class="hero-section">
+      <section class="hero">
         <div class="container">
-          <ul class="hero-list">
-            <li class="hero-item">
-              <button class="hero-button" type="button">Усі</button>
+          <ul class="hero__list">
+            <li class="hero__item">
+              <button class="hero__button" type="button">Усі</button>
             </li>
-            <li class="hero-item">
-              <button class="hero-button" type="button">Веб-сайти</button>
+            <li class="hero__item">
+              <button class="hero__button" type="button">Веб-сайти</button>
             </li>
-            <li class="hero-item">
-              <button class="hero-button" type="button">Додатки</button>
+            <li class="hero__item">
+              <button class="hero__button" type="button">Додатки</button>
             </li>
-            <li class="hero-item">
-              <button class="hero-button" type="button">Дизайн</button>
+            <li class="hero__item">
+              <button class="hero__button" type="button">Дизайн</button>
             </li>
-            <li class="hero-item">
-              <button class="hero-button" type="button">Маркетинг</button>
+            <li class="hero__item">
+              <button class="hero__button" type="button">Маркетинг</button>
             </li>
           </ul>
-          <ul class="hero-posters">
-            <a class="hero-link" href="focus">
-              <li class="hero-poster">
-                <div class="hero-overlay">
-                  <p class="hero-overlay-text">
+          <ul class="hero__posters">
+            <a class="hero__link" href="focus">
+              <li class="hero__poster">
+                <div class="hero__overlay">
+                  <p class="hero__overlaytext">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
-                <img class="hero-image" src="../img/laptop.webp" alt="laptop" />
-                <h3 class="hero-title">Технокряк</h3>
-                <p class="hero-text">Веб-сайт</p>
+                <img class="hero__image" src="../img/laptop.webp" alt="laptop" />
+                <h3 class="hero__title">Технокряк</h3>
+                <p class="hero__work">Веб-сайт</p>
               </li>
             </a>
-            <a class="hero-link" href="focus">
-              <li class="hero-poster">
-                <div class="hero-overlay">
-                  <p class="hero-overlay-text">
+            <a class="hero__link" href="focus">
+              <li class="hero__poster">
+                <div class="hero__overlay">
+                  <p class="hero__overlaytext">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
                 <img
-                  class="hero-image"
+                  class="hero__image"
                   src="../img/basketball.webp"
                   alt="basketball"
                 />
-                <h3 class="hero-title">Постер New Orlean vs Golden Star</h3>
-                <p class="hero-text">Дизайн</p>
+                <h3 class="hero__title">Постер New Orlean vs Golden Star</h3>
+                <p class="hero__work">Дизайн</p>
               </li>
             </a>
-            <a class="hero-link" href="focus">
-              <li class="hero-poster">
-                <div class="hero-overlay">
-                  <p class="hero-overlay-text">
+            <a class="hero__link" href="focus">
+              <li class="hero__poster">
+                <div class="hero__overlay">
+                  <p class="hero__overlaytext">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
-                <img class="hero-image" src="../img/fish.webp" alt="fish" />
-                <h3 class="hero-title">Ресторан Seafood</h3>
-                <p class="hero-text">Додаток</p>
+                <img class="hero__image" src="../img/fish.webp" alt="fish" />
+                <h3 class="hero__title">Ресторан Seafood</h3>
+                <p class="hero__work">Додаток</p>
               </li>
             </a>
-            <a class="hero-link" href="focus">
-              <li class="hero-poster">
-                <div class="hero-overlay">
-                  <p class="hero-overlay-text">
+            <a class="hero__link" href="focus">
+              <li class="hero__poster">
+                <div class="hero__overlay">
+                  <p class="hero__overlaytext">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
                 <img
-                  class="hero-image"
+                  class="hero__image"
                   src="../img/headphones.webp"
                   alt="headphones"
                 />
-                <h3 class="hero-title">Проєкт Prime</h3>
-                <p class="hero-text">Маркетинг</p>
+                <h3 class="hero__title">Проєкт Prime</h3>
+                <p class="hero__work">Маркетинг</p>
               </li>
             </a>
-            <a class="hero-link" href="focus">
-              <li class="hero-poster">
-                <div class="hero-overlay">
-                  <p class="hero-overlay-text">
+            <a class="hero__link" href="focus">
+              <li class="hero__poster">
+                <div class="hero__overlay">
+                  <p class="hero__overlaytext">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
-                <img class="hero-image" src="../img/box.webp" alt="box" />
-                <h3 class="hero-title">Проєкт Boxes</h3>
-                <p class="hero-text">Додаток</p>
+                <img class="hero__image" src="../img/box.webp" alt="box" />
+                <h3 class="hero__title">Проєкт Boxes</h3>
+                <p class="hero__work">Додаток</p>
               </li>
             </a>
-            <a class="hero-link" href="focus">
-              <li class="hero-poster">
-                <div class="hero-overlay">
-                  <p class="hero-overlay-text">
+            <a class="hero__link" href="focus">
+              <li class="hero__poster">
+                <div class="hero__overlay">
+                  <p class="hero__overlaytext">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
-                <img class="hero-image" src="../img/pc.webp" alt="pc" />
-                <h3 class="hero-title">Inspiration has no Borders</h3>
-                <p class="hero-text">Веб-сайт</p>
+                <img class="hero__image" src="../img/pc.webp" alt="pc" />
+                <h3 class="hero__title">Inspiration has no Borders</h3>
+                <p class="hero__work">Веб-сайт</p>
               </li>
             </a>
-            <a class="hero-link" href="focus">
-              <li class="hero-poster">
-                <div class="hero-overlay">
-                  <p class="hero-overlay-text">
+            <a class="hero__link" href="focus">
+              <li class="hero__poster">
+                <div class="hero__overlay">
+                  <p class="hero__overlaytext">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
-                <img class="hero-image" src="../img/book.webp" alt="book" />
-                <h3 class="hero-title">Видання Limited Edition</h3>
-                <p class="hero-text">Дизайн</p>
+                <img class="hero__image" src="../img/book.webp" alt="book" />
+                <h3 class="hero__title">Видання Limited Edition</h3>
+                <p class="hero__work">Дизайн</p>
               </li>
             </a>
-            <a class="hero-link" href="focus">
-              <li class="hero-poster">
-                <div class="hero-overlay">
-                  <p class="hero-overlay-text">
+            <a class="hero__link" href="focus">
+              <li class="hero__poster">
+                <div class="hero__overlay">
+                  <p class="hero__overlaytext">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
-                <img class="hero-image" src="../img/label.webp" alt="label" />
-                <h3 class="hero-title">Проєкт LAB</h3>
-                <p class="hero-text">Маркетинг</p>
+                <img class="hero__image" src="../img/label.webp" alt="label" />
+                <h3 class="hero__title">Проєкт LAB</h3>
+                <p class="hero__work">Маркетинг</p>
               </li>
             </a>
-            <a class="hero-link" href="focus">
-              <li class="hero-poster">
-                <div class="hero-overlay">
-                  <p class="hero-overlay-text">
+            <a class="hero__link" href="focus">
+              <li class="hero__poster">
+                <div class="hero__overlay">
+                  <p class="hero__overlaytext">
                     Ресурс пропонує комплексні пропозиції з різним рівнем
                     функціоналу та сервісів. Все це дозволить відвідувачу
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
-                <img class="hero-image" src="../img/work.webp" alt="work" />
-                <h3 class="hero-title">Growing Business</h3>
-                <p class="hero-text">Додаток</p>
+                <img class="hero__image" src="../img/work.webp" alt="work" />
+                <h3 class="hero__title">Growing Business</h3>
+                <p class="hero__work">Додаток</p>
               </li>
             </a>
           </ul>
@@ -218,80 +218,83 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="footer-container container">
-        <ul class="footer-list">
-          <li class="footer-item">
-            <a href="../index.html" class="footer-logo"
-              ><span class="footer-logo1">Web</span
-              ><span class="footer-logo2">Studio</span></a
+      <div class="footer__container container">
+        <ul class="footer__list">
+          <li class="footer__item">
+            <a href="../index.html" class="footer__logo"
+              ><span class="footer__logo1">Web</span
+              ><span class="footer__logo2">Studio</span></a
             >
           </li>
-          <li class="footer-item">
-            <address class="footer-address">
+          <li class="footer__item">
+            <address class="footer__address">
               м. Київ, пр-т Лесі Українки, 26
             </address>
           </li>
-          <li class="footer-item">
-            <a class="footer-email" href="mailto:info@devstudio.com"
+          <li class="footer__item">
+            <a class="footer__email" href="mailto:info@devstudio.com"
               >info@devstudio.com</a
             >
           </li>
-          <li class="footer-item">
-            <a class="footer-phone" href="tel:+380961111111"
+          <li class="footer__item">
+            <a class="footer__phone" href="tel:+380961111111"
               >+38 096 111 11 11</a
             >
           </li>
         </ul>
-        <div class="footer-icons">
-          <h3 class="footer-icon-subtitle">ПРИЄДНУЙТЕСЬ</h3>
-          <ul class="footer-icon-list">
-            <li class="footer-icon-item">
-              <a class="footer-contacts" href="instagram">
-                <svg class="footer-icon">
+        <div class="footer__icons">
+          <h3 class="footer__subtitle">ПРИЄДНУЙТЕСЬ</h3>
+          <ul class="footer__least">
+            <li class="footer__subitem">
+              <a class="footer__contacts" href="instagram">
+                <svg class="footer__icon">
                   <use href="../img/symbol-defs.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-icon-item">
-              <a class="footer-contacts" href="twitter">
-                <svg class="footer-icon">
+            <li class="footer__subitem">
+              <a class="footer__contacts" href="twitter">
+                <svg class="footer__icon">
                   <use href="../img/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-icon-item">
-              <a class="footer-contacts" href="facebook">
-                <svg class="footer-icon">
+            <li class="footer__subitem">
+              <a class="footer__contacts" href="facebook">
+                <svg class="footer__icon">
                   <use href="../img/symbol-defs.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-icon-item">
-              <a class="footer-contacts" href="linkedin">
-                <svg class="footer-icon">
+            <li class="footer__subitem">
+              <a class="footer__contacts" href="linkedin">
+                <svg class="footer__icon">
                   <use href="../img/symbol-defs.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <form action="" class="basement-form">
-          <h1 class="basement-form-title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h1>
-          <div class="basement-form-container">
-            <input
-              type="text"
-              name=""
-              class="basement-form-input"
-              placeholder="E-mail"
-            />
-            <button type="submit" class="basement-form-button">
-              Підписатися
-              <svg class="basement-form-icon">
-                <use href="../img/symbol-defs.svg#icon-telegram"></use>
-              </svg>
-            </button>
-          </div>
-        </form>
+        <section class="basement">
+          <form action="" class="basement__form">
+            <h1 class="basement__title">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</h1>
+            <div class="basement__container">
+              <input
+                required
+                type="text"
+                name=""
+                class="basement__input"
+                placeholder="E-mail"
+              />
+              <button type="submit" class="basement__button">
+                Підписатися
+                <svg class="basement__icon">
+                  <use href="../img/symbol-defs.svg#icon-telegram"></use>
+                </svg>
+              </button>
+            </div>
+          </form>
+        </section>
       </div>
     </footer>
   </body>
