--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </section>
 
       <!-- information -->
-      <section class="info">
+      <!-- <section class="info">
         <div class="container info__container">
           <ul class="info__list">
             <li class="info__item">
@@ -102,10 +102,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- work -->
-      <section class="work">
+      <!-- <section class="work">
         <div class="container work__container">
           <h2 class="work__title">Чим ми займаємося</h2>
           <ul class="work__list">
@@ -123,10 +123,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- team -->
-      <section class="team">
+      <!-- <section class="team">
         <div class="container team__container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
@@ -264,10 +264,10 @@
             </li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <!-- customers -->
-      <section class="customers">
+      <!-- <section class="customers">
         <div class="customers__container container">
           <h2 class="customers__title">Постійні клієнти</h2>
           <div class="customers__icons">
@@ -303,9 +303,9 @@
             </a>
           </div>
         </div>
-      </section>
+      </section> -->
     </main>
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="footer__container container">
         <ul class="footer__list">
           <li class="footer__item">
@@ -384,8 +384,8 @@
           </form>
         </section>
       </div>
-    </footer>
-    <div data-modal class="backdrop is-hidden">
+    </footer> -->
+    <!-- <div data-modal class="backdrop is-hidden">
       <div class="modal">
         <form action="" class="modal__form">
           <button data-modal-close type="submit" class="modal-btnclose">
@@ -443,6 +443,6 @@
         </form>
       </div>
     </div>
-    <script src="./js/modal.js"></script>
+    <script src="./js/modal.js"></script> -->
   </body>
 </html>
