--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </section>
 
       <!-- information -->
-      <!-- <section class="info">
+      <section class="info">
         <div class="container info__container">
           <ul class="info__list">
             <li class="info__item">
@@ -102,10 +102,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- work -->
-      <!-- <section class="work">
+      <section class="work">
         <div class="container work__container">
           <h2 class="work__title">Чим ми займаємося</h2>
           <ul class="work__list">
@@ -123,10 +123,10 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- team -->
-      <!-- <section class="team">
+      <section class="team">
         <div class="container team__container">
           <h2 class="team__title">Наша команда</h2>
           <ul class="team__list">
@@ -264,7 +264,7 @@
             </li>
           </ul>
         </div>
-      </section> -->
+      </section>
 
       <!-- customers -->
       <!-- <section class="customers">
