--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
       </section>
 
       <!-- customers -->
-      <!-- <section class="customers">
+      <section class="customers">
         <div class="customers__container container">
           <h2 class="customers__title">Постійні клієнти</h2>
           <div class="customers__icons">
@@ -303,7 +303,7 @@
             </a>
           </div>
         </div>
-      </section> -->
+      </section>
     </main>
     <!-- <footer class="footer">
       <div class="footer__container container">
