--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
         </section>
       </div>
     </footer>
-    <!-- <div data-modal class="backdrop is-hidden">
+    <div data-modal class="backdrop is-hidden">
       <div class="modal">
         <form action="" class="modal__form">
           <button data-modal-close type="submit" class="modal-btnclose">
@@ -425,6 +425,6 @@
         </form>
       </div>
     </div>
-    <script src="./js/modal.js"></script> -->
+    <script src="./js/modal.js"></script>
   </body>
 </html>
