--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -22,45 +22,50 @@
   <body>
     <header class="header">
       <div class="container header__container">
-        <a href="../index.html" class="header__logo"
-          ><span class="header__logo1">Web</span
-          ><span class="header__logo2">Studio</span></a
-        >
-        <ul class="header__list">
-          <li class="header__item">
-            <a href="../index.html" class="header__link">Студія</a>
-          </li>
-          <li class="header__item">
-            <a href="./pages/portfolio.html" class="header__link">Портфоліо</a>
-          </li>
-          <li class="header__item">
-            <a href="contacts.html" class="header__link">Контакти</a>
-          </li>
-        </ul>
-        <ul class="header__autorisations">
-          <li class="header__item2">
-            <a href="info@devstudio.com" class="header__contacts">
-              <svg class="header__mail">
-                <use href="../img/symbol-defs.svg#icon-mail"></use>
-              </svg>
-              info@devstudio.com
-            </a>
-          </li>
-          <li class="header__item2">
-            <a href="+380961111111" class="header__contacts">
-              <svg class="header__phone">
-                <use href="../img/symbol-defs.svg#icon-phone"></use>
-              </svg>
-              +38 096 111 11 11
-            </a>
-          </li>
-        </ul>
+        <nav class="header__nav">
+          <a href="../index.html" id="logo" class="header__logo"
+            ><span class="header__logo1">Web</span
+            ><span class="header__logo2">Studio</span></a
+          >
+          <button type="button" class="header__button js-open-menu"><img src="../img/menu.png" alt="menu" class="header__menu"></button>
+          <ul class="header__list">
+            <li class="header__item">
+              <a href="../index.html" class="header__link">Студія</a>
+            </li>
+            <li class="header__item">
+              <a href="./pages/portfolio.html" class="header__link"
+                >Портфоліо</a
+              >
+            </li>
+            <li class="header__item">
+              <a href="contacts.html" class="header__link">Контакти</a>
+            </li>
+          </ul>
+          <ul class="header__autorisations">
+            <li class="header__item2">
+              <a href="info@devstudio.com" class="header__contacts">
+                <svg class="header__mail">
+                  <use href="./img/symbol-defs.svg#icon-mail"></use>
+                </svg>
+                info@devstudio.com
+              </a>
+            </li>
+            <li class="header__item2">
+              <a href="+380961111111" class="header__contacts">
+                <svg class="header__phone">
+                  <use href="./img/symbol-defs.svg#icon-phone"></use>
+                </svg>
+                +38 096 111 11 11
+              </a>
+            </li>
+          </ul>
+        </nav>
       </div>
     </header>
     <main>
       <!-- Hero -->
       <section class="hero">
-        <div class="container">
+        <div class="container hero__container">
           <ul class="hero__list">
             <li class="hero__item">
               <button class="hero__button" type="button">Усі</button>
@@ -88,7 +93,11 @@
                     отримати вичерпні відомості про компанію чи приватну особу.
                   </p>
                 </div>
-                <img class="hero__image" src="../img/laptop.webp" alt="laptop" />
+                <img
+                  class="hero__image"
+                  src="../img/laptop.webp"
+                  alt="laptop"
+                />
                 <h3 class="hero__title">Технокряк</h3>
                 <p class="hero__work">Веб-сайт</p>
               </li>
@@ -297,5 +306,42 @@
         </section>
       </div>
     </footer>
+    <div class="menu js-menu-container is-hidden" id="mobile-menu">
+      <button type="submit" class="menu__btnclose js-close-menu">
+        <svg class="menu__icon">
+          <use href="../img/symbol-defs.svg#icon-close"></use>
+        </svg>
+      </button>
+      <ul class="menu__list">
+        <li class="menu__item">
+          <a href="./index.html" class="menu__link">Студія</a>
+        </li>
+        <li class="menu__item">
+          <a href="./pages/portfolio.html" class="menu__link">Портфоліо</a>
+        </li>
+        <li class="menu__item">
+          <a href="/" class="menu__link">Контакти</a>
+        </li>
+      </ul>
+      <ul class="menu__list2">
+        <li class="menu__items">
+          <a href="tel:+380961111111" class="menu__number">
+            +38 096 111 11 11
+          </a>
+        </li>
+        <li class="menu__items">
+          <a href="mailto:info@devstudio.com" class="menu__email">
+            info@devstudio.com
+          </a>
+        </li>
+      </ul>
+      <ul class="menu__list3">
+          <li class="menu__itm"><a href="https://www.instagram.com" class="menu__contacts">Instagram</a></li>
+          <li class="menu__itm"><a href="https://www.twitter.com" class="menu__contacts">Twitter</a></li>
+          <li class="menu__itm"><a href="https://www.facebook.com" class="menu__contacts">Facebook</a></li>
+          <li class="menu__itm"><a href="https://www.linkedin.com" class="menu__contacts">LinkedIn</a></li>
+      </ul>
+    </div>
+    <script defer src="../js/mobile-menu.js"></script>
   </body>
 </html>
