--- a/index.html
+++ b/index.html
@@ -115,15 +115,24 @@
           <h2 class="work__title">Чим ми займаємося</h2>
           <ul class="work__list">
             <li class="work__item">
-              <img class="work__image" src="./img/img.webp" alt="Work1" />
+              <picture>
+                <source srcset="./img/desktop/work-image1@desktop-1x.webp 1x, ./img/desktop/work-image1@desktop-2x.webp 2x" media="(min-width: 1200px)">
+                <img class="work__image" src="./img/desktop/work-image1@desktop-1x.webp" alt="Work1" />
+              </picture>
               <p class="work__text">Десктопні додатки</p>
             </li>
             <li class="work__item">
-              <img class="work__image" src="./img/img1.webp" alt="Work2" />
+              <picture>
+                <source srcset="./img/desktop/work-image2@desktop-1x.webp 1x, ./img/desktop/work-image2@desktop-2x.webp 2x" media="(min-width: 1200px)">
+                <img class="work__image" src="./img/desktop/work-image2@desktop-1x.webp" alt="Work2" />
+              </picture>
               <p class="work__text">Мобільні додатки</p>
             </li>
             <li class="work__item">
-              <img class="work__image" src="./img/img2.webp" alt="Work3" />
+              <picture>
+                <source srcset="./img/desktop/work-image3@desktop-1x.webp 1x, ./img/desktop/work-image3@desktop-2x.webp 2x" media="(min-width: 1200px)">
+                <img class="work__image" src="./img/desktop/work-image3@desktop-1x.webp" alt="Work3" />
+              </picture>
               <p class="work__text">Дизайнерські рішення</p>
             </li>
           </ul>
